# CycleGAN

./: Readme.md  pyproject.toml  test.py  train.py
train/: meta.csv
