[tool.poetry]
name = "cyclegan"
version = "1.0"
description = "CycleGAN algorithm for synthetic data"
authors = ["physici"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-image = "^0.25.0"
numpy = "^1.26.2"
matplotlib = "^3.10"
tensorflow = "^2.14.0"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pylsp-mypy = "^0.6.5"
mypy = "<=1.3.0"

[tool.pylsp-mypy]
enabled = true
live_mode = false
dmypy = true
strict = true

[tool.mypy]
# allow_untyped_globals = true
allow_redefinition = true
ignore_missing_imports = true
ignore_missing_imports_per_module = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"